# portfolio-optimization

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  custom_algo_updated.md  pyproject.toml  returns_algorithm.md  run.py  weighted_top_five.md
results/analysis/: benchmark_analysis.md  benchmark_analysis_summary.txt
results/analysis/rebalancing/: rebalancing_comparison.md
results/analysis/rebalancing_comparison/: benchmark_analysis.md
results/models/: ofa_algorithm_log.txt
src/analysis/: benchmark_analysis.py  compare_rebalancing.py  returns_sharpe_comparison.py
src/config/: periods.py
src/optimization/: custom_algo.md  custom_algorithm.py  fast_algo.md  fast_algorithm.py  fast_algorithm_selection.py  one_factor_fast_algorithm.py  returns_algorithm.py  utils.py  visualize_portfolio.py  vizualize_portfolio.py  weighted_top_five.py
src/preprocessing/: generate_benchmarks.py  process_etf_data.py
