[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_optimization"
version = "0.1.0"
description = "Quantitative Portfolio Optimization Project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "black",
    "isort",
    "flake8",
    "ruff",
]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
# Enable flake8-bugbear (`B`) rules
select = ["E", "F", "B", "I"]
ignore = []

# Same as Black
line-length = 88

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "portfolio_env",
    "__pypackages__",
    "dist",
    "build",
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10
max-complexity = 10

# Enable isort rules
[tool.ruff.isort]
known-first-party = ["portfolio_optimization"]

# Enable flake8-bugbear rules
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__ files
