[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_optimization"
version = "0.1.0"
description = "Quantitative Portfolio Optimization Project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "black",
    "isort",
    "flake8",
    "ruff",
]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.lint.isort]
profile = "black"
line_length = 88

[tool.ruff]
# Enable flake8-bugbear (`B`) rules
lint.select = ["E", "F", "B", "I"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Same as Black
line-length = 88

# Exclude a variety of commonly ignored directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "portfolio_env",
    "__pypackages__",
    "dist",
    "build",
]

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10
max-complexity = 10

# Enable isort rules
[tool.ruff.lint.isort]
known-first-party = ["portfolio_optimization"]

# Enable flake8-bugbear rules
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__ files
# Configure line length as a warning through `extend-select` and `extend-ignore`
extend-select = ["E501"]  # Explicitly select line length rule
extend-ignore = ["E501"]  # But also ignore it as an error

[dependency-groups]
dev = [
    "ruff>=0.11.6",
]
